Bug 107823 - Impress: User cannot finish Presentation Minimizer
Summary: Impress: User cannot finish Presentation Minimizer
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
5.4.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Julien Nabet
URL:
Whiteboard: target:5.4.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2017-05-13 15:02 UTC by sawakaze
Modified: 2017-05-13 22:55 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
ScreenCapture (38.77 KB, image/png)
2017-05-13 15:03 UTC, sawakaze
Details

Note You need to log in before you can comment on or make changes to this bug.
Description sawakaze 2017-05-13 15:02:39 UTC
Description:
Hi,

Because Presentation Minimizer is not shown "finish" button(See Attachment Screen Capture), User cannnot finish Presentation Minimizer. 

Steps to Reproduce:
The Way to open Presentation Minimizer is following Step.

1.Open Impress
2.Tool > Minimize Presentation 



Actual Results:  
not show buttons.

Expected Results:
show buttons.


Reproducible: Always

User Profile Reset: No

Additional Info:


User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/58.0.3029.96 Safari/537.36
Comment 1 sawakaze 2017-05-13 15:03:33 UTC
Created attachment 133294 [details]
ScreenCapture
Comment 2 Xisco Faulí 2017-05-13 16:50:10 UTC
Regression introduced by:

author	Noel Grandin <noel.grandin@collabora.co.uk>	2017-04-03 09:02:38 (GMT)
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2017-04-03 09:40:19 (GMT)
commit 5d0e485e827057eee9fb2c997685690b710e7f34 (patch)
tree c83057f1e85195379451fafe32b274065f99167e
parent ed6c5a4908edb7d4ab075127b710a92e2abc753f (diff)
use actual UNO enums in reportdesign..svtools

Bisected with bibisect-linux-64-5.4

Adding Cc: to Noel Grandin
Comment 3 Julien Nabet 2017-05-13 22:19:24 UTC
I submitted a patch here: https://gerrit.libreoffice.org/#/c/37584/

Noel: I suppose this one may be reverted once UnoButtonControl::GetComponentServiceName in toolkit/source/controls/unocontrols.cxx will be changed to use awt::PushButtonType instead of sal_Int16
Comment 4 Commit Notification 2017-05-13 22:55:30 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7e21f3d3fc374d3f7cb58bb4ff051f609329ddb2

tdf#107823: missing buttons in Presentation Minimizer

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.