tdf#107823: missing buttons in Presentation Minimizer

Regression from https://cgit.freedesktop.org/libreoffice/core/commit/?id=5d0e485e827057eee9fb2c997685690b710e7f34

Change-Id: I1864e7f7ac73fc13af82237f4f7d4dbaaa5733f5
Reviewed-on: https://gerrit.libreoffice.org/37584
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>